--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -82,7 +82,7 @@
              <div class="row">
              <div class="col-md-10 col-sm-12 ">
                  <br/><br/>
-                 <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Upload</span>
+                 <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Upload <i class="fa fa-upload"></i></span>
   </button>
                  </div>
              </div>
