--- a/Website/visa_app2.html
+++ b/Website/visa_app2.html
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1>VISA Primary Form 2</h1>     
+                <h1>VISA Primary Form</h1>     
             </div>
         </div>
     <!--Questions-->    
