--- a/Website/index.html
+++ b/Website/index.html
@@ -114,7 +114,9 @@ Please note: You cannot complete your supplementary evaluation until after you h
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-        <a class="btn btn-default" id="signin" href="program.html">Sign in</a>
+        <a id="signin" href="program.html">Sign in <i class="fa fa-caret-right fa-lg"></i>
+
+</a>
     </div>
   </div>
 </form>
