--- a/Website/visa_app.html
+++ b/Website/visa_app.html
@@ -35,7 +35,14 @@
 
 
     <!-- Page Content -->
-    <a href="index.html"><div id="logout">Logout <i class="fa fa-power-off"></i></div></a>
+    <div class="col-md-12 col-md-offset-9 col-sm-12">
+           <div class="col-md-1 col-sm-12">
+            <a href="program.html"><div id="logout">Home <i class="fa fa-home"></i></div></a></div>
+          <div class="col-md-1 col-sm-12">
+            <a href="index.html"><div id="logout">Help <i class="fa fa-question-circle"></i></div></a></div>
+        <div class="col-md-1  col-sm-12">
+            <a href="index.html"><div id="logout">Logout <i class="fa fa-power-off"></i></div></a></div>
+    </div>
     <div id="sideBar"></div>
     <div class="container">
     <div class="col-md-12 col-sm-12">
@@ -56,17 +63,21 @@
     <!--Questions-->    
     <div class="row">
         <div class="col-md-12 col-sm-12">
-            <p class="questions">Are you currently attending high school?<br/></p>
-               <div class="col-md-2 col-sm-12">
-                    <textarea name="visa013" value="vvisa013" class="form-control" rows="1"></textarea><br/>
-               </div>     
+             <p class="questions">Are you currently attending high school?<br/></p>
+             <div class="col-md-2 col-sm-12">
+                 <select name="visa013" value="vvisa013" class="form-control">
+                     <option>Yes</option>>
+                     <option>No</option>
+                     </select><br/>
+            </div>
+           
         </div>   
     </div>
           <div class="row">
         <div class="col-md-12 col-sm-12">
             <p class="questions">If yes, please indicate name of high school:<br/></p>
                <div class="col-md-7 col-sm-12">
-                    <textarea name="visa014" value="vvisa014" class="form-control" rows="1"></textarea><br/>
+                    <textarea style="resize:none" name="visa014" value="vvisa014" class="form-control" rows="1"></textarea><br/>
                </div>     
         </div>   
     </div>
@@ -74,7 +85,7 @@
         <div class="col-md-12 col-sm-12">
             <p class="questions">High school address:<br/></p>
                <div class="col-md-7 col-sm-12">
-                    <textarea  name="visa015" value="vvisa015" class="form-control" rows="1"></textarea><br/>
+                    <textarea style="resize:none" name="visa015" value="vvisa015" class="form-control" rows="1"></textarea><br/>
                </div>     
         </div>   
     </div>
@@ -82,7 +93,10 @@
         <div class="col-md-12 col-sm-12">
             <p class="questions">Is this an Ontario High School? <br/></p>
                <div class="col-md-2 col-sm-12">
-                    <textarea name="visa016" value="vvisa016" class="form-control" rows="1"></textarea><br/>
+                     <select name="visa016" value="vvisa016" class="form-control">
+                     <option>Yes</option>>
+                     <option>No</option>
+                     </select><br/>
                </div>     
         </div>   
     </div>
