--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -22,19 +22,20 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
 <body>
 
     <!-- Page Content -->
-    <a href="index.html"><div id="logout">Logout <i class="fa fa-power-off"></i></div></a>
+     <div class="col-md-12 col-md-offset-9 col-sm-12">
+         <div class="col-md-1 col-sm-12">
+            <a href="program.html"><div id="logout">Home <i class="fa fa-home"></i></div></a></div>
+          <div class="col-md-1 col-sm-12">
+            <a href="index.html"><div id="logout">Help <i class="fa fa-question-circle"></i></div></a></div>
+        <div class="col-md-1  col-sm-12">
+            <a href="index.html"><div id="logout">Logout <i class="fa fa-power-off"></i></div></a></div>
+    </div>
     <div id="sideBar"></div>
     <div class="container">
      
