Fixed minor issuissues

--- a/Website/visa_app.html
+++ b/Website/visa_app.html
@@ -35,7 +35,7 @@
 
 
     <!-- Page Content -->
-    <div class="col-md-12 col-md-offset-9 col-sm-12">
+    <div class="col-md-12 col-sm-12">
         <div class="col-md-1 col-sm-12">
             <a href="program.html">
                 <div id="logout">Home <i class="fa fa-home"></i>
