--- a/Website/index.html
+++ b/Website/index.html
@@ -54,14 +54,14 @@
                     <div class="form-horizontal" role="form">
                        
                         <div class="form-group">
-                            <label  class="col-sm-2 control-label" style="margin-top:-10px">Reference Number</label>
+                            <label  class="col-sm-2 control-label" style="margin-top:-10px; color:white">Reference Number</label>
                             <div class="col-sm-8">
                                 <input type="email" class="form-control" id="inputEmail3" placeholder="Reference Number">
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                            <label for="inputPassword3" class="col-sm-2 control-label" style="color:white">Password</label>
                             <div class="col-sm-8">
                                 <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                             </div>
