--- a/Website/program.html
+++ b/Website/program.html
@@ -35,7 +35,7 @@
 <body>
 
     <!-- Page Content -->
-    <div class="col-md-12 col-md-offset-10 col-sm-12">
+    <div class="col-md-12  col-sm-12">
         <div class="col-md-1 col-sm-12">
             <a data-toggle="modal" data-target="#myModal">
                 <div id="logout">Help <i class="fa fa-question-circle"></i>
