Fixed minor issues

--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <!-- Page Content -->
+    <!-- Page Content removed offset -->
     <div class="col-md-12 col-sm-12">
         <div class="col-md-1 col-sm-12">
             <a href="program.html">
