--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -29,7 +29,7 @@
 
     <!-- Page Content removed offset -->
     <div class="col-md-12 col-sm-12">
-        <div class="col-md-1 col-sm-12">
+        <div class="col-md-1 col-sm-12 col-md-offset-9">
             <a href="program.html">
                 <div id="logout">Home <i class="fa fa-home"></i>
                 </div>
