--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -134,12 +134,11 @@
             </div>
             <div class="col-md-3 col-sm-12 ">
                 <br/>
-<div id="uploadStep">
-                
-                
-                <h3>2. Click Upload</h3>
-                                  <center><button  id="uploadButton"type="button" class="btn btn-danger btn-block" onclick="toggleVis(document.getElementById('progressBar'))"> <i class="fa fa-cloud-upload"></i> Upload</button>
-    </center>
+                <div id="uploadStep">
+                    <h3>2. Click Upload</h3>
+                    <div class="col-md-9 col-sm-12 ">
+                            <center><button  id="uploadButton"type="button" class="btn btn-danger btn-block" onclick="toggleVis(document.getElementById('progressBar'))"> <i class="fa fa-cloud-upload"></i> Upload</button>
+                            </center></div>
             </div>
             </div>
 
