Center upload button

--- a/Website/visa_app3.html
+++ b/Website/visa_app3.html
@@ -135,10 +135,10 @@
             <div class="col-md-3 col-sm-12 ">
                 <br/>
                 <div id="uploadStep">
-                    <h3>2. Click Upload</h3>
-                    <div class="col-md-9 col-sm-12 ">
-                            <center><button  id="uploadButton"type="button" class="btn btn-danger btn-block" onclick="toggleVis(document.getElementById('progressBar'))"> <i class="fa fa-cloud-upload"></i> Upload</button>
-                            </center></div>
+                   <center> <h3>2. Click Upload</h3>
+                    
+                            <button  id="uploadButton"type="button" class="btn btn-danger btn-block" onclick="toggleVis(document.getElementById('progressBar'))"> <i class="fa fa-cloud-upload"></i> Upload</button>
+                            </center>
             </div>
             </div>
 
