--- a/Website/program.html
+++ b/Website/program.html
@@ -98,25 +98,36 @@
                 <div class="col-md-12 col-sm-12">
 
                     <div class="col-md-3 col-sm-12">
-                        <div id="musicBtn">
+                         <a href="Production/production_app.html">
+                        <div id="productionBtn">
                             <i class="fa fa-circle-thin fa-2x" style="color:#4bd21c;margin-left:110px;margin-top:5px"></i>
+                        </div></a>
+                        <div class="subtext1">
+                            Application Complete
                         </div>
+                    </div>
+                     <div class="col-md-3 col-sm-12">
+                          <a href="Design/design_landing.html">
+                        <div id="designBtn">
+                        </div>
+                              </a>
                         <div class="subtext1">
                             Application Complete
                         </div>
                     </div>
 
                     <div class="col-md-3 col-sm-12">
+                         <a href="Theatre/theatre_app.html">
                         <div id="theatreBtn"></div>
+                             </a>
                         <div class="subtext1">
                             Deadline: Oct. 31 2015
                         </div>
                     </div>
 
                     <div class="col-md-3 col-sm-12">
-                        <a href="visa_app.html">
-                            <div id="visualBtn">
-                            </div>
+                        <a href="SW/sw_app.html">
+                            <div id="productionBtn"></div>
                         </a>
                         <div class="subtext1">
                             Deadline: Oct. 31 2015
