Fixed all linking pages

--- a/Website/Theatre/theatre_app3.html
+++ b/Website/Theatre/theatre_app3.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>AMPD Supplimentary Application | Visual Arts</title>
+    <title>AMPD Supplimentary Application | Theatre</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -97,8 +97,7 @@
                         Supplementary Evaluation
                         </div>
                         <div class="programName">
-                            VISUAL
-                            <br/>ARTS
+                            THEATRE
                         </div>
                     
                 </div>
@@ -172,7 +171,7 @@
             <div class="col-md-7 col-sm-12">
 
                 <div class="col-md-3 col-sm-12">
-                    <a id="prevButton" href="visa_app2.html"> <i class="fa fa-angle-left"></i> Prev</a>
+                    <a id="prevButton" href="theatre_app2.html"> <i class="fa fa-angle-left"></i> Prev</a>
                 </div>
                 <center>
                     <div class="col-md-2 col-md-offset-2 col-sm-12">
@@ -180,7 +179,7 @@
                     </div>
                 </center>
                 <div class="col-md-3 col-md-offset-2 col-sm-12">
-                    <a id="nextButton" href="visa_app3.html">Next <i class="fa fa-angle-right"></i></a>
+                    <a id="nextButton" href="theatre_app3.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
 
             </div>
