--- a/Website/program.html
+++ b/Website/program.html
@@ -98,7 +98,7 @@
                 <div class="col-md-12 col-sm-12">
 
                     <div class="col-md-3 col-sm-12">
-                         <a href="Production/production_app.html">
+                         <a href="Production/production_landing.html">
                         <div id="productionBtn">
                             <i class="fa fa-circle-thin fa-2x" style="color:#4bd21c;margin-left:110px;margin-top:5px"></i>
                         </div></a>
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-12">
-                         <a href="Theatre/theatre_app.html">
+                         <a href="Theatre/theatre_landing.html">
                         <div id="theatreBtn"></div>
                              </a>
                         <div class="subtext1">
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-12">
-                        <a href="SW/sw_app.html">
+                        <a href="SW/sw_landing.html">
                             <div id="productionBtn"></div>
                         </a>
                         <div class="subtext1">
