Added all questions

--- a/Website/Theatre/theatre_app2.html
+++ b/Website/Theatre/theatre_app2.html
@@ -103,58 +103,61 @@
         <!--Questions-->
 
 
+       <div class="col-md-12 col-sm-12">
+            <div class="row">
+                <br/>
+                <p class="questions">Address
+                    <br/>
+                </p>
+                <div class="col-md-7 col-sm-12">
+                      <textarea style="resize:none" name="vthea015" value="vthea015" class="form-control" rows="1"></textarea>
+
+                    <br/>
+
+                </div>
+            </div>
+        </div>
+
         <div class="col-md-12 col-sm-12">
             <div class="row">
-<br/>
-                <p class="questions">Are you currently attending, or have you previously attended, any other post-secondary institution?
+                <p class="questions">Is this an Ontario High School?
+                    <br/>
+                </p>
+                
+                <div class="col-md-2 col-sm-12">
+
+                    <select name="vthea016" value="vthea016" class="form-control">
+                        <option>Yes</option>>
+                        <option>No</option>
+                    </select>                    <br/>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 col-sm-12">
+            <div class="row">
+
+                <p class="questions">Are you currently attending, or have you previously attended, any other post-secondary institution? 
                     <br/>
                 </p>
                 <div class="col-md-2 col-sm-12">
-
-                    <select name="visa017" value="vvisa017" class="form-control">
+                    <select name="vthea017" value="vthea017" class="form-control">
                         <option>No</option>>
                         <option>Yes</option>
-                    </select>
-                    <br/>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-12 col-sm-12">
-            <div class="row">
-                <p class="questions">If yes, please complete the following:
-                    <br/>
-                </p>
-                <p class="questions">Name of School
-                    <br/>
-                </p>
-                <div class="col-md-7 col-sm-12">
-                    <textarea style="resize:none" name="visa018" value="vvisa018" class="form-control" rows="1"></textarea>
-                    <br/>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-12 col-sm-12">
-            <div class="row">
-
-                <p class="questions">Degree/Certificate/Diploma (if any)
-                    <br/>
-                </p>
-                <div class="col-md-7 col-sm-12">
-                    <textarea style="resize:none" name="visa019" value="vvisa019" class="form-control" rows="1"></textarea>
-                    <br/>
+                    </select>                       <br/>
                 </div>
             </div>
         </div>
         <div class="col-md-10 col-sm-12">
             <div class="row">
 
-                <p class="questions">In approximately 250 words, tell us about your creative interests, influences and goals as they relate to your choice for post-secondary studies.
+                <p class="questions">If yes, please complete the following:
+                    <br/>
+                </p>
+                <p class="questions">Name of School:
                     <br/>
                 </p>
                 <div class="col-md-9 col-sm-12">
-                    <textarea style="resize:none" name="visa026" class="form-control" rows="5"></textarea>
+                    <textarea style="resize:none" name="vthea018" class="form-control" rows="1"></textarea>
                     <br/>
                 </div>
             </div>
