--- a/Website/Theatre/theatre_app.html
+++ b/Website/Theatre/theatre_app.html
@@ -115,51 +115,60 @@
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 <br/>
-                <p class="questions">Are you currently attending high school?
+                 <div class="col-md-3">
+                     <p class="questions">Surname
                     <br/>
                 </p>
-                <div class="col-md-2 col-sm-12">
-                    <select name="visa013" value="vvisa013" class="form-control">
-                        <option>Yes</option>>
-                        <option>No</option>
-                    </select>
+                <div class="col-md-12 col-sm-12">
+                     <textarea style="resize:none" name="vthea001" value="vthea001" class="form-control" rows="1"></textarea>
                     <br/>
+                </div>
+                </div>
+               
+                 <div class="col-md-3">
+                     <p class="questions">First Name
+                    <br/>
+                </p>
+                <div class="col-md-12 col-sm-12">
+                     <textarea style="resize:none" name="vthea002" value="vthea002" class="form-control" rows="1"></textarea>
+                    <br/>
+                </div>
                 </div>
 
             </div>
         </div>
-        <div class="row">
+       <div class="row">
             <div class="col-md-12 col-sm-12">
-                <p class="questions">If yes, please indicate name of high school:
+                <p class="questions">York Student Number (if known)
                     <br/>
                 </p>
                 <div class="col-md-7 col-sm-12">
-                    <textarea style="resize:none" name="visa014" value="vvisa014" class="form-control" rows="1"></textarea>
+                    <textarea style="resize:none" name="vthea012" value="vthea012" class="form-control" rows="1"></textarea>
                     <br/>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <p class="questions">High school address:
-                    <br/>
-                </p>
-                <div class="col-md-7 col-sm-12">
-                    <textarea style="resize:none" name="visa015" value="vvisa015" class="form-control" rows="1"></textarea>
-                    <br/>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <p class="questions">Is this an Ontario High School?
+                <p class="questions">Are you currently attending highschool?
                     <br/>
                 </p>
                 <div class="col-md-2 col-sm-12">
-                    <select name="visa016" value="vvisa016" class="form-control">
+                   <select name="vthea013" value="vthea013" class="form-control">
                         <option>Yes</option>>
                         <option>No</option>
                     </select>
+                    <br/>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <p class="questions">If yes, please name:
+                    <br/>
+                </p>
+                <div class="col-md-7 col-sm-12">
+                    <textarea style="resize:none" name="vthea014" value="vthea014" class="form-control" rows="1"></textarea>
                     <br/>
                 </div>
             </div>
