Fixed linking issues

--- a/Website/program.html
+++ b/Website/program.html
@@ -109,7 +109,7 @@
                     </div>
 
                     <div class="col-md-2 col-sm-12">
-                        <a href="Theatre/theatre_app.html">
+                        <a href="Theatre/theatre_landing.html">
                         <div id="theatreBtn"></div>
                         <div class="subtext1">
                             Deadline: Oct. 31 2015
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="col-md-2 col-sm-12">
-                        <a href="SW/sw_app.html">
+                        <a href="SW/sw_landing.html">
                             <div id="swBtn">
                             </div>
                         </a>
