--- a/Website/Theatre/theatre_app3.html
+++ b/Website/Theatre/theatre_app3.html
@@ -170,19 +170,17 @@
         <br/>
         <div class="row">
             <div class="col-md-7 col-sm-12">
-
-                <div class="col-md-3 col-sm-12">
-                    <a id="prevButton" href="visa_app2.html"> <i class="fa fa-angle-left"></i> Prev</a>
+                <div class="col-xs-4 col-sm-4 col-md-3">
+                    <a id="prevButton" href="theatre_app2.html"> <i class="fa fa-angle-left"></i> Prev</a>
                 </div>
-                <center>
-                    <div class="col-md-2 col-md-offset-2 col-sm-12">
+               
+                    <div class=" col-xs-4 col-sm-4 col-md-2 col-md-offset-2 ">
                         <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
                     </div>
-                </center>
-                <div class="col-md-3 col-md-offset-2 col-sm-12">
-                    <a id="nextButton" href="visa_app3.html">Next <i class="fa fa-angle-right"></i></a>
+                
+                <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2 ">
+                    <a id="nextButton" href="theatre_app3.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
-
             </div>
         </div>
         <!--End of Save/Next/Prev-->
