Added error handling

--- a/Website/Register/register_success.html
+++ b/Website/Register/register_success.html
@@ -14,10 +14,10 @@
     <title>Register | AMPD Supplimentary Application</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/ampdStyle.css" rel="stylesheet">
+    <link href="../css/ampdStyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
@@ -81,7 +81,7 @@
 
 
                         <div class="form-group">
-                            <div class="col-sm-3" id="registerButt"><a id="signin" href="index.html">Continue <i class="fa fa-caret-right fa-lg"></i></a>
+                            <div class="col-sm-3" id="registerButt"><a id="signin" href="../index.html">Continue <i class="fa fa-caret-right fa-lg"></i></a>
 
                             </div>
                             <div class="col-sm-4">
@@ -113,10 +113,10 @@
         };
     </script>
     <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+    <script src="../js/jquery-1.11.0.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
