--- a/Website/Register/register_success_email.html
+++ b/Website/Register/register_success_email.html
@@ -14,10 +14,10 @@
     <title>Register | AMPD Supplimentary Application</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/ampdStyle.css" rel="stylesheet">
+    <link href="../css/ampdStyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
@@ -65,9 +65,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1>Registration</h1>
+                <h1>Thank You!</h1>
                 <div class="col-md-8 col-sm-12">
-                    <p class="subtext">If this is your first time logging in, please provide us with your reference number.</p>
+                    <p class="subtext">Thank you for registering, a confirmation email has been sent to your perfered email address. Click the link provided in the email to confirm your account. Use your email and password to sign in before begining your evaluation process.</p>
                     <br/>
                 </div>
 
@@ -87,16 +87,11 @@
                 <div class="col-md-8 col-sm-12">
                     <div class="form-horizontal" role="form">
 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label" style="margin-top:-10px; color:white">Reference Number</label>
-                            <div class="col-sm-8">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Reference Number">
-                            </div>
-                        </div>
+                      
 
 
                         <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-3" id="registerButt"><a id="signin" href="register_2.html">Continue <i class="fa fa-caret-right fa-lg"></i></a>
+                            <div class="col-sm-3" id="registerButt"><a id="signin" href="register_success.html">Continue <i class="fa fa-caret-right fa-lg"></i></a>
 
                             </div>
                             <div class="col-sm-4">
@@ -128,10 +123,10 @@
         };
     </script>
     <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+    <script src="../js/jquery-1.11.0.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
