--- a/Website/Register/register_2.html
+++ b/Website/Register/register_2.html
@@ -14,10 +14,10 @@
     <title>Register | AMPD Supplimentary Application</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/ampdStyle.css" rel="stylesheet">
+    <link href="../css/ampdStyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
@@ -181,10 +181,10 @@
             };
         </script>
         <!-- jQuery Version 1.11.0 -->
-        <script src="js/jquery-1.11.0.js"></script>
+        <script src="../js/jquery-1.11.0.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
