Removed Buttons from registration pages, removed dean from pages, added page x/y to design app

--- a/Website/Register/register.html
+++ b/Website/Register/register.html
@@ -73,16 +73,7 @@
                     <br/>
                 </div>
 
-                <div class="col-md-4 col-sm-1">
-                    <div id="sideCircle">
-                        <center>
-                            <img src="http://i.imgur.com/2LOKD73.jpg" alt="" class="img-circle">
-                        </center>
-                        <div class="subtext1">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies dictum arcu, ac pharetra nulla laoreet id." - Dean Shawn Brixey
-                        </div>
-                    </div>
-                </div>
+                
 
             </div>
             <div class="col-md-12 col-sm-12">
@@ -114,7 +105,7 @@
 
                             </div>
                             <div class="col-sm-4">
-                                <a id="signin" data-toggle="modal" data-target="#myModal" data-original-title="Click for help & tips" class="menu">Login Help <i class="fa fa-question-circle"></i>
+                                <a id="signin" data-toggle="modal" data-target="#myModal" data-original-title="Click for help & tips" class="menu">Help <i class="fa fa-question-circle"></i>
                
             </a>
 
