added page Count

--- a/Website/Theatre/theatre_app.html
+++ b/Website/Theatre/theatre_app.html
@@ -192,6 +192,19 @@
             </div>
         </div>
         <!--End of Save/Next/Prev-->
+        <!--Page Count-->
+        <div class="row">
+            <div class="col-md-7 col-sm-7">
+                <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-5">
+                    <div id="pageCount">
+                        1/6
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--/Page Count-->
         <!-- /.row -->
     </div>
     <!-- /.container -->
