--- a/Website/Theatre/theatre_app3.html
+++ b/Website/Theatre/theatre_app3.html
@@ -183,6 +183,19 @@
             </div>
         </div>
         <!--End of Save/Next/Prev-->
+          <!--Page Count-->
+        <div class="row">
+            <div class="col-md-7 col-sm-7">
+                <div class="col-xs-4 col-xs-offset-4 col-sm-4 col-sm-offset-7 col-md-2 col-md-offset-5">
+                    <div id="pageCount">
+                        3/6
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--/Page Count-->
     </div>
  
     <!-- /.container -->
