--- a/Website/Design/design_app.html
+++ b/Website/Design/design_app.html
@@ -61,7 +61,8 @@
                                 <div class="row">
                                     <div class="col-md-4 col-md-offset-2 col-sm-6">
 
-                                        <a href="../program.html" class="btn btn-success btn-large"><i class="icon-white icon-ok"></i> Yes I have, let me leave</a>
+                                        <a href="#" class="btn btn-success btn-large"><i class="icon-white icon-ok"></i> Yes I have, let me leave</a>
+
                                     </div>
                                     <div class="col-md-6 col-sm-6">
 
