Added a bunch of stuff

--- a/Website/Theatre/theatre_app5.html
+++ b/Website/Theatre/theatre_app5.html
@@ -77,7 +77,7 @@
         </div>
         <div class="col-md-1  col-sm-12">
             <div id="logout">
-            <a href="../index.html" data-original-title="Log out and save" class="menu">
+            <a href="" data-toggle="modal" data-target=".SaveandQuit" class="menu">
                 Logout <i class="fa fa-power-off"></i>
                 
             </a>
@@ -123,9 +123,8 @@
                         Supplementary Evaluation
                         </div>
                         <div class="programName">
-                            THEATRE
+                           Bachelor of Arts <br/> Honours Theatre 
                         </div>
-                    
                 </div>
             </div>
         </div>
