--- a/Website/Theatre/theatre_app6.html
+++ b/Website/Theatre/theatre_app6.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-md-1  col-sm-12">
             <div id="logout">
-            <a href="../index.html" data-original-title="Log out and save" class="menu">
+            <a href="" data-toggle="modal" data-target=".SaveandQuit" class="menu">
                 Logout <i class="fa fa-power-off"></i>
                 
             </a>
@@ -161,11 +161,9 @@
                         Supplementary Evaluation
                     </div>
                     <div class="programName">
-                        THEATRE
+                         Bachelor of Arts <br/> Honours Theatre 
                     </div>
-
                 </div>
-
             </div>
         </div>
         <!--/Headings-->
@@ -244,7 +242,7 @@
                     </div>
                 </center>
                 <div class="col-md-3 col-md-offset-2 col-sm-12">
-                    <a id="nextButton" href="theatre_app6.html">Next <i class="fa fa-angle-right"></i></a>
+                    <a id="nextButton" href="theatre_final.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
 
             </div>
