Removed landing page link

--- a/Website/program.html
+++ b/Website/program.html
@@ -98,7 +98,7 @@
                 <div class="col-md-12 col-sm-12">
 
                     <div class="col-md-2 col-sm-12">
-                        <a href="Design/design_landing.html">
+                        <a href="Design/design_app.html">
                         <div id="designBtn">
                             <i class="fa fa-circle-thin fa-2x" style="color:#4bd21c;margin-left:110px;margin-top:5px"></i>
                         </div>
@@ -109,7 +109,7 @@
                     </div>
 
                     <div class="col-md-2 col-sm-12">
-                        <a href="Theatre/theatre_landing.html">
+                        <a href="Theatre/theatre_app.html">
                         <div id="theatreBtn"></div>
                         <div class="subtext1">
                             Deadline: Oct. 31 2015
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="col-md-2 col-sm-12">
-                        <a href="SW/sw_landing.html">
+                        <a href="SW/sw_app.html">
                             <div id="swBtn">
                             </div>
                         </a>
@@ -128,7 +128,7 @@
                     </div>
                     
                      <div class="col-md-2 col-sm-12">
-                        <a href="Production/production_landing.html">
+                        <a href="Production/production_app.html">
                             <div id="proBtn">
                             </div>
                         </a>
