Added panels, fixed css, improved look of logout modal

--- a/Website/Theatre/theatre_review.html
+++ b/Website/Theatre/theatre_review.html
@@ -14,7 +14,7 @@
     <title>AMPD Supplimentary Application | Review</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../css/ampdStyle.css" rel="stylesheet">
