--- a/Website/Design/design_app4.html
+++ b/Website/Design/design_app4.html
@@ -12,7 +12,7 @@
     <title>AMPD Supplimentary Application | Design</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../css/ampdStyle.css" rel="stylesheet">
