--- a/Website/Theatre/theatre_app.html
+++ b/Website/Theatre/theatre_app.html
@@ -200,15 +200,15 @@
         <!--End of questions-->
         <!--Save/Next/Prev-->
         <div class="row">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-7">
 
 
-                <center>
-                    <div class="col-md-2 col-md-offset-5 col-sm-12">
-                        <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
-                    </div>
-                </center>
-                <div class="col-md-3 col-md-offset-2 col-sm-12">
+
+                <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-5">
+                    <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
+                </div>
+
+                <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2">
                     <a id="nextButton" href="theatre_app2.html">Next <i class="fa fa-angle-right"></i>
 </a>
                 </div>
