--- a/Website/Theatre/theatre_app3.html
+++ b/Website/Theatre/theatre_app3.html
@@ -12,7 +12,7 @@
     <title>AMPD Supplimentary Application | Theatre</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../css/ampdStyle.css" rel="stylesheet">
@@ -197,15 +197,15 @@
         <!--Save/Next/Prev-->
         <div class="row">
             <div class="col-md-7 col-sm-12">
-                <div class="col-md-3 col-sm-12">
+                <div class="col-xs-4 col-sm-4 col-md-3">
                     <a id="prevButton" href="theatre_app2.html"> <i class="fa fa-angle-left"></i> Prev</a>
                 </div>
-               <center>
-                    <div class="col-md-2 col-md-offset-2 col-sm-12">
+               
+                    <div class=" col-xs-4 col-sm-4 col-md-2 col-md-offset-2 ">
                         <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
                     </div>
-                </center>
-                <div class="col-md-3 col-md-offset-2 col-sm-12">
+                
+                <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2 ">
                     <a id="nextButton" href="theatre_app4.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
             </div>
