--- a/Website/Theatre/theatre_app6.html
+++ b/Website/Theatre/theatre_app6.html
@@ -12,7 +12,7 @@
     <title>AMPD Supplimentary Application | Theatre</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../css/ampdStyle.css" rel="stylesheet">
@@ -226,25 +226,20 @@
 
         </div>
 
-        <!--Save/Next/Prev-->
-        <br/>
-        <br/>
-        <br/>
+         <!--Save/Next/Prev-->
         <div class="row">
             <div class="col-md-7 col-sm-12">
-
-                <div class="col-md-3 col-sm-12">
+                <div class="col-xs-4 col-sm-4 col-md-3">
                     <a id="prevButton" href="theatre_app5.html"> <i class="fa fa-angle-left"></i> Prev</a>
                 </div>
-                <center>
-                    <div class="col-md-2 col-md-offset-2 col-sm-12">
+               
+                    <div class=" col-xs-4 col-sm-4 col-md-2 col-md-offset-2 ">
                         <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
                     </div>
-                </center>
-                <div class="col-md-3 col-md-offset-2 col-sm-12">
-                    <a id="nextButton" href="theatre_final.html">Next <i class="fa fa-angle-right"></i></a>
+                
+                <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2 ">
+                    <a id="nextButton" href="theatre_app6.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
-
             </div>
         </div>
         <!--End of Save/Next/Prev-->
