Added proper linking to program page, changed icons

--- a/Website/index.html
+++ b/Website/index.html
@@ -118,7 +118,7 @@
 
                             </div>
                             <div class="col-sm-3">
-                                <a id="signin" href="Register/register.html">Register <i class="fa fa-pencil"></i></a>
+                                <a id="signin" href="Register/register.html">Register <i class="fa fa-caret-right fa-lg"></i></a>
 
                             </div>
                             <div class="col-sm-4">
