--- a/Website/program.html
+++ b/Website/program.html
@@ -178,11 +178,11 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="panel panel-red">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Screen Writing <i class="fa fa-laptop"></i></h3>
+                                <h3 class="panel-title">Screen Writing <i class="fa fa-pencil"></i></h3>
                             </div>
                             <div class="panel-body">
                                 <div class="well">
-                                    <h4>1. Questionnaire <i class="fa fa-circle-thin"></i><a id="programButt" href="Design/design_app.html" >Continue <i class="fa fa-caret-right fa-lg"></i></a></h4>
+                                    <h4>1. Questionnaire <i class="fa fa-circle-thin"></i><a id="programButt" href="SW/sw_app.html" >Continue <i class="fa fa-caret-right fa-lg"></i></a></h4>
                                     <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ex ipsum, viverra a aliquet a, congue at ipsum. Curabitur placerat condimentum lobortis. Integer ac gravida massa. </small>
 
 
@@ -212,11 +212,11 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="panel panel-red">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Production <i class="fa fa-comments"></i></h3>
+                                <h3 class="panel-title">Production <i class="fa fa-video-camera"></i></h3>
                             </div>
                              <div class="panel-body">
                                 <div class="well">
-                                    <h4>1. Questionnaire <i class="fa fa-circle-thin"></i><a id="programButt" href="Design/design_app.html" >Continue <i class="fa fa-caret-right fa-lg"></i></a></h4>
+                                    <h4>1. Questionnaire <i class="fa fa-circle-thin"></i><a id="programButt" href="Production/production_app.html" >Continue <i class="fa fa-caret-right fa-lg"></i></a></h4>
                                     <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ex ipsum, viverra a aliquet a, congue at ipsum. Curabitur placerat condimentum lobortis. Integer ac gravida massa. </small>
 
 
