fixed linking on page 6

--- a/Website/Theatre/theatre_app6.html
+++ b/Website/Theatre/theatre_app6.html
@@ -238,7 +238,7 @@
                     </div>
                 
                 <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2 ">
-                    <a id="nextButton" href="theatre_app6.html">Next <i class="fa fa-angle-right"></i></a>
+                    <a id="nextButton" href="theatre_final.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
             </div>
         </div>
