Added sidebar image

--- a/Website/Design/design_app.html
+++ b/Website/Design/design_app.html
@@ -116,6 +116,18 @@
     <div id="sideBar"></div>
     <div class="container">
         <div class="col-md-12 col-sm-12">
+		<!--Image of the Dean -->
+                <div class="col-md-4 col-md-offset-8 col-sm-1">
+                    <div id="sideCircle">
+                        <center>
+                            <img src="http://i.imgur.com/2LOKD73.jpg" alt="" class="img-circle">
+                        </center>
+                        <div class="subtext1">
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies dictum arcu, ac pharetra nulla laoreet id." - Dean Shawn Brixey
+                        </div>
+                    </div>
+                </div>
+        <!--/Image of the Dean -->
             <div class="row">
                 <div class="col-md-7 col-sm-12">
                     <div class="suppHeading">
