--- a/Website/Theatre/theatre_app.html
+++ b/Website/Theatre/theatre_app.html
@@ -124,6 +124,19 @@
     <div id="sideBar"></div>
     <div class="container">
         <div class="col-md-12 col-sm-12">
+        <!--Image of the Dean -->
+                <div class="col-md-4 col-md-offset-8 col-sm-1">
+                    <div id="sideCircle">
+                        <center>
+                            <img src="http://i.imgur.com/2LOKD73.jpg" alt="" class="img-circle">
+                        </center>
+                        <div class="subtext1">
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies dictum arcu, ac pharetra nulla laoreet id." - Dean Shawn Brixey
+                        </div>
+                    </div>
+                </div>
+        <!--/Image of the Dean -->
+        <!--Heading -->
             <div class="row">
                 <div class="col-md-7 col-sm-12">
                     <div class="suppHeading">
@@ -135,6 +148,7 @@
                 </div>
             </div>
         </div>
+        <!--/Heading -->
         <!--Questions-->
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -142,7 +156,7 @@
                  <div class="col-md-3" style="padding:0px">
                      <p class="questions">Surname
                     <br/>
-                </p>
+                     </p>
                 <div class="col-md-12 col-sm-12">
                      <textarea style="resize:none" name="vthea001" value="vthea001" class="form-control" rows="1"></textarea>
                     <br/>
@@ -201,18 +215,13 @@
         <!--Save/Next/Prev-->
         <div class="row">
             <div class="col-md-7 col-sm-7">
-
-
-
                 <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-5">
                     <button type="button" class="savebutton" data-original-title="Don't forget to save your work!">Save</button>
                 </div>
 
                 <div class="col-xs-4 col-sm-4 col-md-3 col-md-offset-2">
-                    <a id="nextButton" href="theatre_app2.html">Next <i class="fa fa-angle-right"></i>
-</a>
+                    <a id="nextButton" href="theatre_app2.html">Next <i class="fa fa-angle-right"></i></a>
                 </div>
-
             </div>
         </div>
         <!--End of Save/Next/Prev-->
@@ -226,12 +235,9 @@
                 </div>
             </div>
         </div>
+        <!--/Page Count-->
     </div>
-
-    <!--/Page Count-->
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
+ <!-- /.container -->
 
     <!-- jQuery Version 1.11.0 -->
     <script src="../js/jquery-1.11.0.js"></script>
