--- a/Website/index.html
+++ b/Website/index.html
@@ -71,7 +71,7 @@
                     <p class="subtext">Please note: You cannot complete your supplementary evaluation until after you have applied for admission to York University and have received your York Reference Number.</p>
                     <br/>
                 </div>
-
+                <!--Image of the Dean -->
                 <div class="col-md-4 col-sm-1">
                     <div id="sideCircle">
                         <center>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!--/Image of the Dean -->
             </div>
             <div class="col-md-12 col-sm-12">
                 <div class="col-md-8 col-sm-12">
@@ -100,7 +100,7 @@
                     <div class="form-horizontal" role="form">
 
                         <div class="form-group">
-                            <label class="col-sm-2 control-label" style="margin-top:-10px; color:white">Email</label>
+                            <label for="inputEmail3" class="col-sm-2 control-label" style="color:white">Email</label>
                             <div class="col-sm-8">
                                 <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                             </div>
