Added terms and conditions draft

--- a/Website/Register/register_2.html
+++ b/Website/Register/register_2.html
@@ -71,13 +71,12 @@
                     <h4 class="modal-title" id="myModalLabel">Terms and Conditions</h4>
                 </div>
                 <div class="modal-body">
-                    <h3>We own you.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam.</p>
-                    <hr>
-                    <h4>Heading 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam. Praesent bibendum, odio non hendrerit fringilla, tortor arcu iaculis massa, sed tempor dolor urna lacinia leo. Curabitur neque lorem, imperdiet sed turpis vel, finibus porta quam. Vestibulum aliquam et massa sit amet elementum.</p>
-                    <h4>Heading 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam. Praesent bibendum, odio non hendrerit fringilla, tortor arcu iaculis massa, sed tempor dolor urna lacinia leo. Curabitur neque lorem, imperdiet sed turpis vel, finibus porta quam. Vestibulum aliquam et massa sit amet elementum.</p>
+                    
+                    <p>The information and material you are providing are for evaluation purposes 
+                        only, related to your application to our program. The samples of your creative 
+                        work (images, sound files, videos etc) remain your property and will not be 
+                        published or used for any other purpose by York University.  The material will
+                        be archived for one year and will then be erased from our system.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
