--- a/Website/program.html
+++ b/Website/program.html
@@ -143,7 +143,7 @@
                                     <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ex ipsum, viverra a aliquet a, congue at ipsum. Curabitur placerat condimentum lobortis. Integer ac gravida massa. </small>
                                 </div>
                                 <div class="well well-sm">
-                                    <h4>2. Interview <a id="programButt" href="Design/design_app.html">Start <i class="fa fa-caret-right fa-lg"></i></a></h4>
+                                    <h4>2. Interview <a id="programButt" href="Theatre/theatre_interview.html">Start <i class="fa fa-caret-right fa-lg"></i></a></h4>
                                     <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ex ipsum, viverra a aliquet a, congue at ipsum. Curabitur placerat condimentum lobortis. Integer ac gravida massa. </small>
                                  </div>
                                 <div class="well well-sm">
