--- a/Website/index.html
+++ b/Website/index.html
@@ -67,8 +67,7 @@
             <div class="col-md-12 col-sm-12">
                 <h1>Supplementary Evaluation</h1>
                 <div class="col-md-8 col-sm-12">
-                    <p class="subtext">If you have applied to more than one of these programs, you must do a separate supplementary evaluation for each.</p>
-                    <p class="subtext">Please note: You cannot complete your supplementary evaluation until after you have applied for admission to York University and have received your York Reference Number.</p>
+                    <p class="subtext">Welcome to the School of Arts, Media, Performance and Design supplementary evaluation website.  If you have already registered with us, please log in below to get started.  If not, please click the register link below</p>
                     <br/>
                 </div>
                 <!--Image of the Dean -->
