Added two more online eval pages

--- a/Website/Theatre/theatre_final.html
+++ b/Website/Theatre/theatre_final.html
@@ -100,13 +100,13 @@
                         If you wish to go back to leave the evaluation and submit at a later time, you can leave this
                         page and all of your work will be saved.
                     </p>
-                           <div id="registerButt"><a id="signin" href="../program.html">Go Back Home <i class="fa fa-caret-right fa-lg"></i></a>
+                        <div id="registerButt"><a id="signin" href="../program.html">Go Back Home <i class="fa fa-caret-right fa-lg"></i></a>
                          </div>
                     </div>
                 </div>
             </div>
         </div>
-       
+       </div>
         <!-- jQuery Version 1.11.0 -->
         <script src="../js/jquery-1.11.0.js"></script>
 
