Fixed submit link

--- a/Website/Theatre/theatre_review.html
+++ b/Website/Theatre/theatre_review.html
@@ -111,7 +111,7 @@
                         <input type="checkbox">I acknowledge that once I submit my evaluation I will not be able to edit and re-submit.
                     </label>
                 </div>
-                <a id="continueButton" href="#" class="btn btn-default" role="button">Submit <i class="fa fa-angle-right"></i></a>
+                <a id="continueButton" href="theatre_submit.html" class="btn btn-default" role="button">Submit <i class="fa fa-angle-right"></i></a>
             </div>
         
         </div>
