Added username/password recovery

--- a/Website/index.html
+++ b/Website/index.html
@@ -42,16 +42,29 @@
                     <h4 class="modal-title" id="myModalLabel">Trouble Logging in?</h4>
                 </div>
                 <div class="modal-body">
-                    <h3>How To</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam.</p>
-                    <hr>
-                    <h4>Heading 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam. Praesent bibendum, odio non hendrerit fringilla, tortor arcu iaculis massa, sed tempor dolor urna lacinia leo. Curabitur neque lorem, imperdiet sed turpis vel, finibus porta quam. Vestibulum aliquam et massa sit amet elementum.</p>
-                    <h4>Heading 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam. Praesent bibendum, odio non hendrerit fringilla, tortor arcu iaculis massa, sed tempor dolor urna lacinia leo. Curabitur neque lorem, imperdiet sed turpis vel, finibus porta quam. Vestibulum aliquam et massa sit amet elementum.</p>
+                    <h4>Email</h4>
+                    <p>Your username is the email address you provided when you registered with us.</p>
+
+                    <p>If you have not registered, please click on the Register button.
+                    
+                    </p>
+
+                    <p>If you do not recall what email you used when you registered with us, please click on the Forgot Email Button.
+                        <hr>
+                        <h4>Password</h4>
+                        <p>Your password is the one you chose when you registered with us.</p>
+
+                        <p>If you have not registered, please click on the Register button.
+                        </p>
+
+                        <p>If you do not recall what password you selected when you registered with us, please click on the Forgot Password Button to have a password reset email sent 
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <a href="Register/register.html" class="btn btn-primary btn-success"><span class="glyphicon glyphicon-list-alt"></span> Register</a> 
+                    <a href="Forgot/forgottenemail.html" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Forgot Email</a>
+                    <a href="Forgot/forgottenpassword.html" class="btn btn-primary btn-danger"><span class="glyphicon glyphicon-info-sign"></span> Forgot Password</a>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 
                 </div>
             </div>
@@ -67,7 +80,7 @@
             <div class="col-md-12 col-sm-12">
                 <h1>Supplementary Evaluation</h1>
                 <div class="col-md-8 col-sm-12">
-                    <p class="subtext">Welcome to the School of Arts, Media, Performance and Design supplementary evaluation website.  If you have already registered with us, please log in below to get started.  If not, please click the register link below</p>
+                    <p class="subtext">Welcome to the School of Arts, Media, Performance and Design supplementary evaluation website. If you have already registered with us, please log in below to get started. If not, please click the register link below</p>
                     <br/>
                 </div>
                 <!--Image of the Dean -->
