--- a/Website/Register/register.html
+++ b/Website/Register/register.html
@@ -85,7 +85,18 @@
                     <div class="alert alert-danger" role="alert">
                         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                         </button>
-                        <strong>Error!</strong> It seems that your reference number may have been typed in incorrectly.
+                        <strong>Error!</strong> It seems that your reference number may have been typed in incorrectly. Click <a href="#" class="btn btn-xs btn-success">here</a> for help finding your reference number
+                    </div>
+                    </div>
+                    </div>
+                    <!-- /Error -->
+                    <!-- Error -->
+                    <div class="row">
+                    <div class="col-md-8 col-md-offset-2 col-sm-12">
+                    <div class="alert alert-warning" role="alert">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                        </button>
+                        <strong>Alert!</strong> It seems that this email address has already been used to register for AMPD.
                     </div>
                     </div>
                     </div>
