Added file number + loading status

--- a/Website/Design/design_app6.html
+++ b/Website/Design/design_app6.html
@@ -131,9 +131,11 @@
              <div id="messages" class="positionClass" ></div></div>
 
         <div class="row">
+           
            <div class="col-md-12 col-sm-12">
             <div class="col-md-7 col-sm-12">
-                <div class="subtext">Please upload an image file which demonstrates your ability to create creative works of art using either water colours or oils on canvas.</div>
+                 <br/>
+                <div class="questions">Please upload an image file which demonstrates your ability to create creative works of art using either water colours or oils on canvas.</div>
 
             </div>
             
