fixed white modal text and added deadline to programs

--- a/Website/Theatre/theatre_submit.html
+++ b/Website/Theatre/theatre_submit.html
@@ -69,7 +69,7 @@
                     <h4 class="modal-title" id="myModalLabel">AMPD Evaluation Tips</h4>
                 </div>
                 <div class="modal-body">
-                    <h3>How To</h3>
+                    <h3 class="black">How To</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam.</p>
                     <hr>
                     <h4>Heading 1</h4>
