--- a/Website/Theatre/theatre_review.html
+++ b/Website/Theatre/theatre_review.html
@@ -69,7 +69,7 @@
                     <h4 class="modal-title" id="myModalLabel">AMPD Evaluation Tips</h4>
                 </div>
                 <div class="modal-body">
-                    <h3>How To</h3>
+                    <h3 class="black">How To</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed magna nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sit amet tortor in est lobortis congue a in quam.</p>
                     <hr>
                     <h4>Heading 1</h4>
@@ -111,7 +111,7 @@
                         <input type="checkbox">I acknowledge that once I submit my evaluation I will not be able to edit and re-submit.
                     </label>
                 </div>
-                <a id="continueButton" href="theatre_submit.html" class="btn btn-default" role="button">Submit <i class="fa fa-angle-right"></i></a>
+                <a id="continueButton" href="theatre_submit.html" class="btn btn-default" role="button">Submit and Pay <i class="fa fa-angle-right"></i></a>
             </div>
         
         </div>
