--- a/Website/Design/design_app.html
+++ b/Website/Design/design_app.html
@@ -22,6 +22,7 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -166,7 +167,7 @@
         <!--Questions-->
         <div class="row">
             <div class="col-md-3">
-                <p class="questions">Surname
+                <p class="questions">Name
                     <br/>
                 </p>
                 <div class="col-md-12 col-sm-12">
@@ -175,16 +176,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
-                <p class="questions">First Name
-                    <br/>
-                </p>
-                <div class="col-md-12 col-sm-12">
-                    <textarea style="resize:none" name="vysdn002" value="vysdn002" class="form-control" rows="1"></textarea>
-                    <br/>
-                </div>
-            </div>
-
+         
 
         </div>
         <div class="row">
