--- a/Website/Design/design_interview.html
+++ b/Website/Design/design_interview.html
@@ -206,7 +206,7 @@
                         
                         <textarea style="resize:none" name="" value="" class="form-control" rows="4"></textarea>
                         <h4>2. Start your online evaluation</h4>
-                        <a href="#" class="btn btn-block btn-lg btn-danger">Begin Evaluation <span class="glyphicon glyphicon-chevron-right"></span></a>
+                        <a href="design_online_eval.html" class="btn btn-block btn-lg btn-danger">Begin Evaluation <span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
 
