--- a/Website/Design/design_interview.html
+++ b/Website/Design/design_interview.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="ampdMenu">
 
             <ul class="nav navbar-nav navbar-right">
-                <li> <a data-toggle="modal" data-target=".SaveandQuit" style="color:white">
+                <li> <a href="../program.html" style="color:white">
                 Home <i class="fa fa-home"></i>
                
             </a>
