--- a/Website/Design/design_app.html
+++ b/Website/Design/design_app.html
@@ -195,13 +195,19 @@
                 <p class="questions">Are you currently attending highschool?
                     <br/>
                 </p>
-                <div class="col-md-2 col-sm-12">
-                    <select name="vysdn013" value="vysdn013" class="form-control">
-                        <option>Yes</option>>
-                        <option>No</option>
-                    </select>
-                    <br/>
-                </div>
+            
+                
+                  <div class="col-md-3 col-sm-12">
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                            <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                <li><a href="">Yes</a></li>
+                                <li><a href="">No</a></li>
+                            </ul>
+                            </div>
+                      </div>
             </div>
         </div>
         <div class="row">
