--- a/Website/Design/design_app6.html
+++ b/Website/Design/design_app6.html
@@ -197,11 +197,10 @@
                         <fieldset>
                             <input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="300000" />
 
-                            <div>
+                            <div class="row">
 
                                 <input style="visibility:hidden" id="fileselect" name="fileselect[]" multiple="multiple" />
-                                <div id="filedrag"><i class="fa fa-cloud-upload"></i></i> Drag Your Files Here</div>
-
+                                <div id="filedrag"><i class="fa fa-cloud-upload"></i> Drag Your Files Here </div>
                             </div>
                         </fieldset>
                     </form>
